--- a/02-quarto-replication-pkg.qmd
+++ b/02-quarto-replication-pkg.qmd
@@ -8,6 +8,7 @@ AEA Replication Package in Quarto:
 - https://aeadataeditor.github.io/aea-de-guidance/
 - https://datacodestandard.org
 - https://social-science-data-editors.github.io/template_README/
+- Journal of Applied econometrics (actually run the code!)
 - [ ] qmd version of the template
 - [ ] example with a folder of stata scripts -- what's a good example from Laura?
 
@@ -21,3 +22,4 @@ Academic features
 Background:
 - https://pubs.aeaweb.org/doi/pdfplus/10.1257/pandp.112.813
 - https://www.vilhuber.com/lars/
+
