--- a/00-pre-workshop.qmd
+++ b/00-pre-workshop.qmd
@@ -1,9 +1,39 @@
 ---
-title: "Pre-Workshop"
+title: "Pre-Work"
 ---
 
-- Install VSCode
-- Install Quarto
-- Get files from template repository
-- Review the AEA guidelines, 
-    - Pick a existing project to bring to the workshop
+## Day 1
+
+-   Download or update the latest versions of R, RStudio, Quarto and git:
+
+    -   R `4.3` (or 4.2 or above): <https://cran.r-project.org>
+
+    -   RStudio `2023.06.0+421` or above: <https://posit.co/download/rstudio-desktop>
+
+    -   Quarto `1.3.433` or above: <https://quarto.org/docs/get-started>
+
+    -   Git `2.37.1` or above: <https://git-scm.com/book/en/v2/Getting-Started-Installing-Git>
+
+-   Install the following R packages by opening RStudio and typing the following in the Console [^1]
+
+```{r}
+#| eval: false
+pkg_list <- c(
+  "tinytex", "quarto", "knitr", "here", "yaml"
+)
+install.packages(pkg_list)
+```
+
+[^1]: See this [video tutorial](https://www.youtube.com/watch?v=u1r5XTqrCTQ) for step-by-step instructions
+
+-   Register an account with GitHub[^2]: <https://github.com/>
+
+[^2]: For more detailed instructions see this [guide](https://happygitwithr.com/github-acct.html)
+
+-   Download [`day01-exercises.zip`](day01-exercises.zip)
+
+## Day 2 \[TBC\]
+
+-   Download `day02-exercises.zip`
+
+## Day 3 \[TBC\]
