--- a/00-pre-workshop.qmd
+++ b/00-pre-workshop.qmd
@@ -30,7 +30,7 @@ install.packages(pkg_list)
 
 [^2]: For more detailed instructions see this [guide](https://happygitwithr.com/github-acct.html)
 
--   Download [`day01-exercises.zip`](day01-exercises.zip)
+-   Download and unzip [`day01-exercises.zip`](day01-exercises.zip). Then, go to RStudio \> File \> New Project \> Existing Directory and navigate to the unzipped `day01-exercises` folder and create an RStudio project in there and open it.
 
 ## Day 2 \[TBC\]
 
