start session 01a slides

--- a/01a-hello-quarto/index.qmd
+++ b/01a-hello-quarto/index.qmd
@@ -1,5 +1,49 @@
-This is the first section
+---
+title: "Hello Quarto"
+author: "Cynthia Huang"
+date: 2023-07-19
+footer: "[🔗 cynthiahqy.github.io/monash-quarto-aea](https://cynthiahqy.github.io/monash-quarto-aea)"
+format:
+  revealjs:
+    theme: default
+    transition: fade
+    slide-number: true
+    chalkboard: true
+---
 
-## Slides
+# Pre-workshop instructions
 
-## Exercises
+## While you wait for the workshop to begin... {.smaller}
+
+-   Download or update the latest versions of R, RStudio, Quarto and git:
+
+    -   R `4.3` (or 4.2 or above): <https://cran.r-project.org>
+    -   RStudio `2023.06.0+421` or above: <https://posit.co/download/rstudio-desktop>
+    -   Quarto `1.3.433` or above: <https://quarto.org/docs/get-started>
+    -   Git `2.37.1` or above: <https://git-scm.com/book/en/v2/Getting-Started-Installing-Git>
+
+-   Install the following packages:
+```{r}
+#| eval: false
+pkg_list <- c(
+  "tinytex", "quarto", "knitr", "here", "yaml"
+)
+install.packages(pkg_list)
+```
+
+-   Download and unzip [`day01-exercises.zip`](https://cynthiahqy.github.io/monash-quarto-aea/day01-exercises.zip)
+
+# Welcome
+
+## About Me
+
+**Cynthia Huang**
+
+- Currently: PhD candidate in EBS
+- Previously: Economics at Unimelb, SoDa Labs
+- passionate about research communication and software
+
+## Workshop Schedule
+
+
+
