--- a/01a-hello-quarto/index.qmd
+++ b/01a-hello-quarto/index.qmd
@@ -1,7 +1,3 @@
----
-title: Hello Quarto!
----
-
 ## Slides
 
 [View slides in full screen](slides.html)
@@ -13,6 +9,7 @@ title: Hello Quarto!
 ## Exercises
 
 - `my_first_doc.qmd`
+<!--- [`my_first_doc.html`](../exercises-all/day01-exercises/my_first_doc.html) -->
 
 ## Resources
 
