--- a/03b-publish/index.qmd
+++ b/03b-publish/index.qmd
@@ -12,6 +12,10 @@
 
 ## Resources
 
+Netlify Drop Guide:
+
+- [Section 6.2 of _Authoring Books with R Markdown_](https://bookdown.org/yihui/bookdown/netlify-drop.html)
+
 Monash Data Fluency Trainings (Upcoming):
 
 - [Open Source Science with Git and GitHub](https://www.monash.edu/data-fluency/events/open-source-with-github-science-and-git)
@@ -20,5 +24,5 @@ Monash Data Fluency Trainings (Upcoming):
 
 Extension:
 
-- [Official Quarto Publishing Guide](https://quarto.org/docs/websites/#quick-start)
+- [Official Quarto Publishing Guide](https://quarto.org/docs/publishing/)
 
