--- a/03d-wrap-up/index.qmd
+++ b/03d-wrap-up/index.qmd
@@ -2,6 +2,10 @@
 title: Wrap-Up
 ---
 
+## Slides
 
-## Exercises
-- `replication-in-parts.qmd`
+[View slides in full screen](slides.html)
+
+```{=html}
+<iframe class="slide-deck" src="slides.html" height="420" width="747" style="border: 1px solid #123233;"></iframe>
+```
