--- a/03d-wrap-up/slides.qmd
+++ b/03d-wrap-up/slides.qmd
@@ -1,12 +1,16 @@
 ---
-title: "Hello Quarto"
-author: "Cynthia Huang"
+title: "Wrap-Up"
+subtitle: "Session 3: Producing and Publishing Websites"
 date: 2023-07-19
-footer: "[🔗 cynthiahqy.github.io/monash-quarto-aea](https://cynthiahqy.github.io/monash-quarto-aea)"
-format:
-  revealjs:
-    theme: default
-    transition: fade
-    slide-number: true
-    chalkboard: true
+format: revealjs
+metadata-files: 
+  - ../_slides.yml
 ---
+
+# Request time!
+
+## Your turn to request!
+
+::: task
+What other aspects / features of a Quarto website or book would you like to learn about?
+:::
