--- a/00-pre-workshop.qmd
+++ b/00-pre-workshop.qmd
@@ -4,15 +4,13 @@ title: "Pre-Work"
 
 ## Day 1
 
--   Download or update the latest versions of R, RStudio, Quarto and git:
+-   Download or update the latest versions of R, RStudio, Quarto:
 
     -   R `4.3` (or 4.2 or above): <https://cran.r-project.org>
 
     -   RStudio `2023.06.0+421` or above: <https://posit.co/download/rstudio-desktop>
 
     -   Quarto `1.3.433` or above: <https://quarto.org/docs/get-started>
-
-    -   Git `2.37.1` or above: <https://git-scm.com/book/en/v2/Getting-Started-Installing-Git>
 
 -   Install the following R packages by opening RStudio and typing the following in the Console [^1]
 
@@ -36,10 +34,6 @@ install.packages(pkg_list)
 [^3]: For more about RStudio Projects see this [explainer](https://support.posit.co/hc/en-us/articles/200526207-Using-RStudio-Projects)
 
 ## Day 2
-
--   If you're not familar with using git from inside RStudio or the command line, please install the latest version of GitHub Desktop: <https://desktop.github.com>
-
-Optional:
 
 -   Keep adding content to `replication-pkg/`
 -   Check out Quarto websites and see if there are any features you'd particularly like to learn:
