--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,9 @@
 ---
-title: "Meeting AEA Replication Standards using Quarto and GitHub"
+title: "Meeting AEA Replication Standards using Quarto"
 subtitle: "Workshop for Department of Economics, Monash University (Jul 18-20, 2023)"
 ---
+
+<!-- ## Post-Workshop Feedback -->
 
 ## Pre-Workshop Tasks
 
